# homelab

./: .gitignore  CLAUDE.md  claude.md
.claude/: settings.local.json
agent/: CLAUDE.md  FIXES.md  IMPLEMENTATION_PLAN.md  README.md  agent_base.py  cli.py  config.yaml  config_cli.py  controller.py  pyproject.toml  setup.sh  test_rag_e2e.py
agent/agent/: __init__.py  agent.py  config_schema.py  hints.py  llm.py  log_viewer.py  monitor.py  prompts.py  rag.py  safety.py  slack.py  tools.py
agent/docs/superpowers/plans/: 2026-05-03-agent-control-plane.md
agent/docs/superpowers/specs/: 2026-05-03-agent-control-plane.md
agent/hints/run_shell/: linstor_stale_mount.yaml
agent/tests/: test_agent_cancel.py  test_agent_logging.py  test_config_schema.py  test_controller.py  test_fix2_slack_security.py  test_fix3_concurrent_shell_gate.py  test_fix6_remove_watched_stacks.py  test_hints.py  test_history_summary.py  test_llm.py  test_llm_live.py  test_rag.py  test_rag_config.py  test_rag_tools.py  test_safety.py
ansible/: CLAUDE.md  README.md  deploy-claude-runner.yml  deploy-edge.yml  deploy-gitea-runner.yml  deploy-llm.yml  deploy-logging-agents.yml  deploy-runner.yml  deploy-traefik-edge.yml  install-basic-tools.yml  install-default-tools.yml  inventory.yml  provision-debian-vm.yml  pyproject.toml
ansible/filter_plugins/: resolve_deps.py  test_resolve_deps.py
ansible/linstor-backup/: README.md  playbook.yml
ansible/linstor-backup/files/: backup-linstor-volumes.sh  linstor-volume-backup.service  linstor-volume-backup.timer  volume-backups  volume-backups-help.txt
ansible/roles/claude-runner/: README.md
ansible/roles/claude-runner/defaults/: main.yml
ansible/roles/claude-runner/files/actions/: chain_skill  create_pr  notify_user  post_gitea_comment  resolve_watch
ansible/roles/claude-runner/files/commands/: handle-pr-comments.md  implement.md  review-pr.md
ansible/roles/claude-runner/handlers/: main.yml
ansible/roles/claude-runner/tasks/: main.yml
ansible/roles/claude-runner/templates/: claude-runner.j2  claude-runner@.service.j2  claude-watcher@.service.j2  run.sh.j2  skills.conf.j2  watch.sh.j2
ansible/roles/cloudflared/: README.md
ansible/roles/cloudflared/defaults/: main.yml
ansible/roles/cloudflared/handlers/: main.yml
ansible/roles/cloudflared/tasks/: main.yml
ansible/roles/cloudflared/templates/: cloudflared-tunnel.service.j2  config.yml.j2
ansible/roles/gitea-runner/: README.md
ansible/roles/gitea-runner/defaults/: main.yml
ansible/roles/gitea-runner/handlers/: main.yml
ansible/roles/gitea-runner/tasks/: install-act-runner.yml  main.yml  register.yml
ansible/roles/gitea-runner/templates/: act-runner.service.j2  config.yaml.j2
ansible/roles/llama/defaults/: main.yml
ansible/roles/llama/tasks/: main.yml
ansible/roles/promtail/defaults/: main.yml
ansible/roles/promtail/handlers/: main.yml
ansible/roles/promtail/tasks/: main.yml
ansible/roles/promtail/templates/: config.yml.j2  promtail.service.j2
ansible/roles/runner/defaults/: main.yml
ansible/roles/runner/handlers/: main.yml
ansible/roles/runner/tasks/: main.yml
ansible/roles/runner/templates/: claude-runner-api.service.j2
ansible/roles/tools/defaults/: main.yml
ansible/roles/tools/meta/: main.yml
ansible/roles/tools/tasks/: install-act.yml  install-cloudflared.yml  install-gh.yml  install-node.yml  install-nvm.yml  install-tea.yml  main.yml
ansible/roles/tools/tasks/debian/: install-docker.yml
ansible/roles/tools/tasks/ubuntu/: install-docker.yml  install-nvidia-drivers.yml
ansible/roles/tools/vars/: main.yml
ansible/roles/traefik-edge/: README.md
ansible/roles/traefik-edge/defaults/: main.yml
ansible/roles/traefik-edge/handlers/: main.yml
ansible/roles/traefik-edge/tasks/: main.yml
ansible/roles/traefik-edge/templates/: docker-compose.yaml.j2  http.yml.j2  traefik.yml.j2
ansible/roles/webui/defaults/: main.yml
ansible/roles/webui/handlers/: main.yml
ansible/roles/webui/tasks/: main.yml
ansible/roles/webui/templates/: open-webui.service.j2
ansible/scripts/: corefile.py  inventory.py  scan_subnet.py  scanner.py  zonefile.py
ansible/tests/: conftest.py  test_corefile.py  test_inventory.py  test_resolve_deps.py  test_scanner.py  test_zonefile.py
ansible/utils/: deploy-all-keys.sh  deploy-key-to-node.sh  setup-ssh-keys.sh
audiobookshelf/: docker-compose.yaml
calibre-web/: docker-compose.yaml
clipcascade/: docker-compose.yaml
codimd/: docker-compose.yaml
coredns/: Corefile  Corefile.bak  docker-compose.yaml  home.db
coredns-tailscale/: Corefile  README.md  docker-compose.yaml
diagrams/: network_goal.puml  network_start.puml
excalidraw/: Dockerfile  docker-compose.yaml
flaresolver/: docker-compose.yaml
flaresolverr/: docker-compose.yaml
gitea/: README.md  docker-compose.yaml
hedgedoc/: docker-compose.yaml
homepage/: README.md  docker-compose.yaml  docker.yaml  services.yaml  settings.yaml
immich/: docker-compose.yaml
infrastructure/: README.md  deploy.yml
jellyfin/: docker-compose.yaml
jellyseerr/: docker-compose.yaml
joplin/: README.md  docker-compose.yaml
lazylibarian/: docker-compose.yaml
litellm/: docker-compose.yaml  litellm_config.yaml
logging/: docker-compose.yaml  loki-config.yml  promtail-config.yml
metrics/: alertmanager.yml  blackbox.yml  docker-compose.yaml  pve.yml
monitoring/: docker-compose.yaml  prometheus.yml
obsidian/: README.md  docker-compose.yaml
open-webui/: docker-compose.yaml
openai-agent/: CLAUDE.md  cli.py  config.yaml  config_cli.py  controller.py  pyproject.toml
openai-agent/agent/: agent.py  config_schema.py  prompts.py  rag.py  slack.py  tools.py
portainer/: docker-compose.yaml
postgres/: docker-compose.yaml
prometheus/: docker-compose.yaml
prowlarr/: docker-compose.yaml
qbittorrent/: docker-compose.yaml
runner/: CLAUDE.md  pyproject.toml  test_output.txt
runner/runner/: cli.py  db.py  logs.py  main.py  models.py  process.py  sessions.py
runner/tests/: conftest.py  test_api.py  test_cli.py  test_logs.py  test_process.py  test_sessions.py
(+73 files in other folders)
