[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-openai-agent"
version = "0.1.0"
description = "Homelab sysadmin agent using OpenAI-compatible API (Ollama)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "docker>=7.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "psycopg[binary]>=3.1",
    "sentence-transformers>=3.0",
]

[project.scripts]
homelab-agent = "cli:main"
homelab-config = "config_cli:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
packages = ["agent"]
include = ["cli.py", "config_cli.py", "config.yaml"]

[tool.hatch.envs.default]
type = "virtual"
python = "3.12"
path = ".venv"

[tool.hatch.envs.default.scripts]
agent = "python cli.py {args}"
config = "python config_cli.py {args}"
check = "python cli.py --check {args}"

[tool.hatch.envs.test]
type = "virtual"
python = "3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args}"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
