[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "sse-starlette>=2.1",
]

[project.scripts]
claude-runner     = "runner.cli:app"
claude-runner-api = "runner.main:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
